:gear: Spectrum: Update profiles
Signed-off-by: dencel007 <dencelkbabu007@gmail.com>

--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -16,13 +16,15 @@ on property:sys.boot_completed=1
 on property:persist.spectrum.profile=0
 
     # CPU
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor alucard
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor elementalx
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor elementalx
     write /sys/module/msm_performance/parameters/touchboost 0
 
     # Hotplug
-    write /sys/kernel/alucard_hotplug/hotplug_enable 0
+    write /sys/kernel/alucard_hotplug/hotplug_enable 1
 
     # Intellithermal
+    write /sys/module/msm_thermal/core_control/enabled 0
     write /sys/module/msm_thermal/parameters/enabled 1
     write /sys/module/msm_thermal/parameters/core_limit_temp_degC 60
     write /sys/module/msm_thermal/parameters/core_temp_hysteresis_degC 10
@@ -31,6 +33,8 @@ on property:persist.spectrum.profile=0
 
     # GPU
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
+    write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 450000000
+    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 450000000
     write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
@@ -60,12 +64,11 @@ on property:persist.spectrum.profile=0
     write /sys/module/lowmemorykiller/parameters/minfree 21711,28948,36185,43422,50659,65133
 
     # Fast Charging
-    write /sys/kernel/fast_charge/force_fast_charge 1   
+    write /sys/kernel/fast_charge/force_fast_charge 0   
 
     # Misc
-    write /sys/class/timed_output/vibrator/vtg_level 3248
+    write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 1
-    write /sys/module/sync/parameters/fsync_enabled N
 
 
 # Performance (based on DrunkSauce Lite)
@@ -73,14 +76,18 @@ on property:persist.spectrum.profile=1
     
     # CPU
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2016000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1401000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1401000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 1094400
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1094400
     write /sys/module/msm_performance/parameters/touchboost 1
 
     # Hotplug
     write /sys/kernel/alucard_hotplug/hotplug_enable 0
 
     # Intellithermal
+    write /sys/module/msm_thermal/core_control/enabled 0
     write /sys/module/msm_thermal/parameters/enabled 1
     write /sys/module/msm_thermal/parameters/core_limit_temp_degC 60
     write /sys/module/msm_thermal/parameters/core_temp_hysteresis_degC 10
@@ -90,8 +97,8 @@ on property:persist.spectrum.profile=1
     # GPU
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
     write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 0
-    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 650000000
-    write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 650000000    
+    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 500000000
+    write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 500000000    
     write /sys/class/kgsl/kgsl-3d0/max_gpuclk 650000000
     write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
@@ -106,21 +113,25 @@ on property:persist.spectrum.profile=1
     write /sys/block/mmcblk1/queue/read_ahead_kb 512
 
     # Misc
-    write /sys/class/timed_output/vibrator/vtg_level 3248
+    write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 0
-    write /sys/module/sync/parameters/fsync_enabled N
+
+    # Fast Charging
+    write /sys/kernel/fast_charge/force_fast_charge 1   
 
 # Battery
 on property:persist.spectrum.profile=2
 
     # CPU
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor alucard
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor alucard
     write /sys/module/msm_performance/parameters/touchboost 0
 
     # Hotplug
     write /sys/kernel/alucard_hotplug/hotplug_enable 1
 
     # Intellithermal
+    write /sys/module/msm_thermal/core_control/enabled 0
     write /sys/module/msm_thermal/parameters/enabled 1
     write /sys/module/msm_thermal/parameters/core_limit_temp_degC 60
     write /sys/module/msm_thermal/parameters/core_temp_hysteresis_degC 10
@@ -129,6 +140,8 @@ on property:persist.spectrum.profile=2
 
     # GPU
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
+    write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 450000000
+    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 450000000
     write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
@@ -146,9 +159,8 @@ on property:persist.spectrum.profile=2
     write /sys/block/mmcblk1/queue/rq_affinity 2
 
     # Misc
-    write /sys/class/timed_output/vibrator/vtg_level 3248
+    write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 1
-    write /sys/module/sync/parameters/fsync_enabled N
 
 
 # Gaming
@@ -156,14 +168,18 @@ on property:persist.spectrum.profile=3
 
     # CPU
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2016000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1401000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1401000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 1094400
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1094400
     write /sys/module/msm_performance/parameters/touchboost 1
 
     # Hotplug
     write /sys/kernel/alucard_hotplug/hotplug_enable 0
 
     # Intellithermal
+    write /sys/module/msm_thermal/core_control/enabled 0
     write /sys/module/msm_thermal/parameters/enabled 1
     write /sys/module/msm_thermal/parameters/core_limit_temp_degC 60
     write /sys/module/msm_thermal/parameters/core_temp_hysteresis_degC 10
@@ -173,9 +189,9 @@ on property:persist.spectrum.profile=3
     # GPU
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
     write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 0
-    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 650000000
-    write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 650000000    
-    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 650000000
+    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 500000000
+    write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 500000000    
+    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 500000000
     write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
     write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
@@ -189,6 +205,8 @@ on property:persist.spectrum.profile=3
     write /sys/block/mmcblk1/queue/read_ahead_kb 512
 
     # Misc
-    write /sys/class/timed_output/vibrator/vtg_level 3248
+    write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 0
-    write /sys/module/sync/parameters/fsync_enabled N
+
+    # Fast Charging
+    write /sys/kernel/fast_charge/force_fast_charge 1  
