--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -35,11 +35,8 @@ on property:persist.spectrum.profile=0
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
     write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 450000000
     write /sys/class/kgsl/kgsl-3d0/max_gpuclk 450000000
-    write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
-    write /sys/module/adreno_idler/parameters/adreno_idler_active "1"
     write /sys/module/adreno_idler/parameters/adreno_idle_workaround 7000
+    write /sys/module/adreno_idler/parameters/adreno_idler_active Y
 
     # IO
     write /sys/block/mmcblk0/queue/scheduler fiops
@@ -63,13 +60,15 @@ on property:persist.spectrum.profile=0
     chown root /sys/module/lowmemorykiller/parameters/minfree
     write /sys/module/lowmemorykiller/parameters/minfree 21711,28948,36185,43422,50659,65133
 
-    # Fast Charging
-    write /sys/kernel/fast_charge/force_fast_charge 0   
-
     # Misc
     write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 1
 
+    # D2TW
+    write /sys/android_touch/doubletap2wake 0
+
+    # Fast Charging
+    write /sys/kernel/fast_charge/force_fast_charge 0
 
 # Performance (based on DrunkSauce Lite)
 on property:persist.spectrum.profile=1
@@ -99,12 +98,9 @@ on property:persist.spectrum.profile=1
     write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 0
     write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 500000000
     write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 500000000    
-    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 650000000
-    write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
-    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
+    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 500000000
     write /sys/module/adreno_idler/parameters/adreno_idle_workaround 7000
+    write /sys/module/adreno_idler/parameters/adreno_idler_active N
 
     # IO
     write /sys/block/mmcblk0/queue/scheduler deadline
@@ -116,8 +112,11 @@ on property:persist.spectrum.profile=1
     write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 0
 
+    # D2TW
+    write /sys/android_touch/doubletap2wake 1
+
     # Fast Charging
-    write /sys/kernel/fast_charge/force_fast_charge 1   
+    write /sys/kernel/fast_charge/force_fast_charge 1
 
 # Battery
 on property:persist.spectrum.profile=2
@@ -142,11 +141,8 @@ on property:persist.spectrum.profile=2
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
     write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 450000000
     write /sys/class/kgsl/kgsl-3d0/max_gpuclk 450000000
-    write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
-    write /sys/module/adreno_idler/parameters/adreno_idler_active "1"
     write /sys/module/adreno_idler/parameters/adreno_idle_workaround 7000
+    write /sys/module/adreno_idler/parameters/adreno_idler_active Y
 
     # IO
     write /sys/block/mmcblk0/queue/scheduler noop
@@ -162,6 +158,11 @@ on property:persist.spectrum.profile=2
     write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 1
 
+    # D2TW
+    write /sys/android_touch/doubletap2wake 0
+
+    # Fast Charging
+    write /sys/kernel/fast_charge/force_fast_charge 0
 
 # Gaming
 on property:persist.spectrum.profile=3
@@ -192,11 +193,8 @@ on property:persist.spectrum.profile=3
     write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 500000000
     write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 500000000    
     write /sys/class/kgsl/kgsl-3d0/max_gpuclk 500000000
-    write /sys/module/simple_gpu_algorithm/parameters/simple_gpu_activate 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_laziness 1
-    write /sys/module/simple_gpu_algorithm/parameters/simple_ramp_threshold 7000
-    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
     write /sys/module/adreno_idler/parameters/adreno_idle_workaround 7000
+    write /sys/module/adreno_idler/parameters/adreno_idler_active Y
 
     # IO
     write /sys/block/mmcblk0/queue/scheduler deadline
@@ -208,5 +206,8 @@ on property:persist.spectrum.profile=3
     write /sys/class/timed_output/vibrator/vtg_level 2691
     write /sys/kernel/sched/arch_power 0
 
+    # D2TW
+    write /sys/android_touch/doubletap2wake 1
+
     # Fast Charging
-    write /sys/kernel/fast_charge/force_fast_charge 1  
+    write /sys/kernel/fast_charge/force_fast_charge 1
